# LinTune

./: .gitignore  BUILD.md  IMPLEMENTATION_PLAN.md  LinTune-test.spec  LinTune.spec  POC_COMPLETE.md  QUICKSTART.md  README.md  UNINSTALL_GUIDE.md  install-deps.sh  lintune.sh  lintune_launcher.py  pyproject.toml  requirements.txt  test_components.py  test_configurator.py  test_himmelblau.py  test_installer.py  test_package_manager.py  verify_detections.py
.github/workflows/: build.yml
docs/: UI_DESIGN_SPEC.md
origin/: EntraID_Intune_Setup_Simplified.md  setup-entraid.sh
scripts/: update_version.py
src/lintune/: __init__.py  __main__.py
src/lintune/core/: __init__.py  configurator.py  distro.py  himmelblau.py  installer.py  package_manager.py  validator.py
src/lintune/gui/: __init__.py  dashboard.py  devices_view.py  dialogs.py  logs_view.py  main_window.py  settings_view.py  sidebar.py  widgets.py
src/lintune/resources/styles/: fluent.qss
src/lintune/utils/: __init__.py  logger.py  sudo_helper.py
