[tool.poetry]
name = "lintune"
version = "0.1.1"
description = "EntraID & Intune Setup for Linux - Cross-distro enrollment tool"
authors = ["Magnus Overli <magnus@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "lintune", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
PyQt6 = "^6.6.0"
jinja2 = "^3.1.0"
distro = "^1.9.0"
psutil = "^5.9.0"

[tool.poetry.scripts]
lintune = "lintune.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-qt = "^4.2.0"
black = "^23.0.0"

